--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+		<title>Dustin's League Page</title>  
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Dustin's League Page</title>  
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-		<script src="https://kit.fontawesome.com/1ffa57cc84.js" crossorigin="anonymous"></script>
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+		<script src="https://kit.fontawesome.com/1ffa57cc84.js" crossorigin="anonymous"></script>		
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/main.css" rel="stylesheet" type="text/css" /> 
 	</head>
@@ -14,7 +14,7 @@
 		<!-- NAVBAR -->
 		<nav class="navbar navbar-expand sticky-top">
 			<div class="container-xxl">
-				<a class="navbar-brand text-white m-1">
+				<a class="navbar-brand text-white m-1" href="index.html">
           <h4 class="d-inline">
             <img id="logo" src="assets/Rocket-League-Emblem.png" height="32" width="64">
             ROCKET LEAGUE | E-Sports
@@ -200,7 +200,8 @@
 									and Sub-Saharan Africa, with teams earning points towards qualifying for the world finals 
 									and the subsequent major of that split.</p>
 							</div>	
-							<!-- TEAMS TABLE -->
+							<!-- TEAMS TABLE -->							
+							<div class="row" id="teamPageWrapper">
 							<div class="row" id="teamPageWrapper">
 								
 							</div>							
@@ -216,19 +217,6 @@
 		</footer>
 
 		<script src="https://unpkg.com/ejs@3.1.3/ejs.min.js"></script>
-    <script src="js/models/mock_team_data.js"></script>
-    <script src="js/models/team_view_model.js"></script>
-    <script src="js/models/app_view_model.js"></script>
-    <script src="js/models/local_storage_service.js"></script>
-    <script src="js/views/list_page_view.js"></script>
-    <script src="js/controllers/app_controller.js"></script>
-    <script>
-      $(document).ready(function(){       
-        (async () => {
-          app = new AppController(appViewModel); 
-          await app.render();
-        })();						
-    	})
-  	</script>		
+    <script type="module" src="js/main.js"></script>	
   </body>
 </html>
